--- a/project/package.json
+++ b/project/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "sass": "^1.69.5",
     "vite": "^5.0.8"
+  },
+  "dependencies": {
+    "bootstrap-icons": "^1.11.2"
   }
 }
